--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body {
+Hibody {
     background-color: black;
     color: red;
     text-align: center;
@@ -9,7 +9,7 @@ body {
     width: 900px;
     margin: 200px;
     color: aqua;
-    border: 2px solid #083966;
+    border: 2px solid #082656;
     border-radius: 20px;
 }
  
