--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
     width: 900px;
     margin: 200px;
     color: aqua;
-    border: 2px solid #082656;
+    border: 2px solid teal;
     border-radius: 20px;
 }
  
