CSS filed updated

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     font-size: 175px;
     width: 900px;
     margin: 200px;
-    color: aqua;
+    color: teal;
     border: 2px solid teal;
     border-radius: 20px;
 }
