--- a/main.css
+++ b/main.css
@@ -5,18 +5,21 @@ body {
 
 .container {
     font-size: 175px;
-    width: 900px;
+    width: 100%;
     margin: 200px;
     color: teal;
     border: 2px solid teal;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
  
-@media screen and (max-width: 670px) {
+@media screen and (max-width: 900px) {
   .container {
     font-size: 55px;
     padding: 10px;
-    display: flex;
-
+    width: 250px;
+   
    }
 }
