--- a/main.css
+++ b/main.css
@@ -13,3 +13,8 @@ body {
     border-radius: 20px;
 }
  
+@media screen and (min-width: 480px) {
+  body {
+    background-color: lightgreen;
+  }
+}
