--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #012;
     color: red;
     text-align: center;
 }
@@ -13,8 +13,13 @@ body {
     border-radius: 20px;
 }
  
-@media screen and (min-width: 480px) {
-  body {
-    background-color: lightgreen;
-  }
+@media screen and (max-width: 670px) {
+  .container {
+    font-size: 35px;
+    width: 400px;
+    margin: 200px;
+    color: teal;
+    border: 2px solid teal;
+    border-radius: 20px;
+   }
 }
